# mgbench

./: CMakeLists.txt  README.md  build.sh  run_current.sh
src/L0/: devinfo.cpp  numgpus.cpp
src/L1/: fullduplex.cpp  halfduplex.cpp  scatter.cpp  uva.cpp
src/L2/gol/: golsample.cpp  main.cpp
src/L2/sgemm/: main.cpp  sgemm.cpp
